update: delete notification
